--- a/officeRedirectChecker/templates/office_checker.html
+++ b/officeRedirectChecker/templates/office_checker.html
@@ -19,7 +19,19 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       padding: 20px;
       max-width: 800px;
+      overflow-wrap: break-word; 
       text-align: center;
+    }
+    .result {
+      margin-top: 25px;
+      color: #333333;
+      font-size: 16px;
+      padding: 15px;
+      background-color: #f1f1f1;
+      border-radius: 4px;
+      border: 1px solid #dddddd;
+      overflow-wrap: break-word;
+      word-break: break-all; 
     }
     h1 {
       color: #333333;
@@ -58,7 +70,6 @@
 <body>
   <div class="container">
     <h1>Office 365 Redirect Checker</h1>
-    <!-- Add your explanation here -->
     <p>Enter your email address to check its organization.</p>
     
     <input type="email" id="email" placeholder="Enter your email" required>
