--- a/officeRedirectChecker/templates/office_checker.html
+++ b/officeRedirectChecker/templates/office_checker.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Office 365 Redirect Checker</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Roboto', sans-serif; 
       background-color: #f4f6f9;
       display: flex;
       justify-content: center;
@@ -38,16 +40,16 @@
     }
     p {
       color: #555555;
-      font-size: 14px;
-      margin-bottom: 20px;
+      font-size: 17px;
+      margin-bottom: 18px;
     }
     input[type="email"] {
       width: 100%;
       padding: 10px;
       margin-bottom: 10px;
-      border: 1px solid #dddddd;
+      border: 3px solid #dddddd;
       border-radius: 4px;
-      font-size: 14px;
+      font-size: 18px;
     }
     button {
       background-color: #4CAF50;
@@ -67,7 +69,7 @@
     }
   p {
     color: #444444;
-    font-size: 15px;
+    font-size: 18px;
     line-height: 1.6;
     margin-bottom: 20px;
     text-align: justify;
